@@ -1,3 +1,6 @@
+Version 2009122001
++ Get rid of Kwalitee tests.
+
 Version 2009111902
 + The CPAN toolchain doesn't actually check build_requires.
 
